--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+invoke = "^2.0.0"
 
+
+[tool.poetry.group.dev.dependencies]
+coverage = "^7.2.2"
+pytest = "^7.2.2"
 
 [build-system]
 requires = ["poetry-core"]
