--- a/Pong/pyproject.toml
+++ b/Pong/pyproject.toml
@@ -8,11 +8,13 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 invoke = "^2.0.0"
+coverage = "^7.2.3"
+pytest = "^7.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
 coverage = "^7.2.2"
-pytest = "^7.2.2"
+pytest = "^7.3.0"
 
 [build-system]
 requires = ["poetry-core"]
