--- a/Pong/pyproject.toml
+++ b/Pong/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 invoke = "^2.0.0"
 coverage = "^7.2.3"
 pytest = "^7.3.0"
+pygame = "^2.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
