--- a/Pong/pyproject.toml
+++ b/Pong/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "pong"
+name = "src"
 version = "0.1.0"
 description = ""
 authors = ["Ismail Tadji <ismail.tadji@gmail.com>"]
