--- a/Pong/.coveragerc
+++ b/Pong/.coveragerc
@@ -1,3 +1,3 @@
 [run]
 source = src
-omit = src/**/__init__.py,src/tests/**,src/index.py
+omit = src/**/__init__.py,src/tests/**,src/index.py,src/initialise_db.py,src/database_connection.py,src/config.py,src/ui/**,src/running/**,src/repositories/**
